# bard

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: CI.yaml  Dockerfile
default/: bard.toml  template-tex.tex
default/output/: .gitignore  songbook.html  songbook.tex
default/output/fonts/: fonts.css  fonts.tex
default/templates/: html.hbs  html.html  pdf.hbs  pdf.tex
doc/: .gitignore  Makefile  bard.toml.md  book.css  book.toml  markdown.md  templates.md  transposition.md
doc/book/: SUMMARY.md  bard.toml.md  extensions.md  fonts.md  hovorka.md  images.md  install.md  intro.md  json-and-xml.md  migration-2.md  project.md  scripts.md  songs.md  templates-helpers.md  templates.md  tex.md  transposition.md
doc/book/assets/: html-basic.hbs  songbook.html
doc/pub/: index.html
doc/pub/assets/: index.css
doc/screenshots-project/: .gitignore  bard.toml
doc/screenshots-project/output/: fonts
doc/screenshots-project/songs/: images.md  songs.md  transposition.md
example/: bard.toml  songbook.html  songbook.json  songbook.tex  songbook.txt  template-html.html  template-tex.tex  templates
example/output/: fonts  songbook.hovorka.xml  songbook.html  songbook.json  songbook.tex  songbook.xml
example/songs/: 01 Wild Mountain Thyme.md  03 Danny Boy.md  Danny Boy.md  Handsome Molly.md  Whiskey in the Jar.md  Whiskey in the Jard.md  Wild Mountain Thyme.md
example/templates/: hovorka.hbs  html.hbs  pdf.hbs
src/: app.rs  book.rs  cli.rs  default_project.rs  error.rs  lib.rs  main.rs  music.rs  parser.rs  prelude.rs  project.rs  render.rs  tectonic_embed.rs  util.rs  util_cmd.rs  watch.rs
src/book/: version.rs  xml.rs
src/parser/: html.rs  tests.rs
src/project/: input.rs  output.rs  postprocess.rs
src/render/: hovorka.rs  html.rs  json.rs  mod.rs  pdf.rs  template.rs  tex.rs  tex_tools.rs  txt.rs  xml.rs
src/render/template/: tests.rs
src/render/templates/: hovorka.hbs  html.hbs  pdf.hbs
src/render/xml/: support.rs  xml_support.rs
src/util/: path.rs  process.rs  process_generic.rs  process_nix.rs  xml_support.rs
src/util/process/: process_generic.rs  process_nix.rs  tests.rs
tests/: all-features.rs  ast-version-check.rs  bad-unicode-path.rs  cli-versions.rs  default.rs  hbs-js.rs  html.rs  init.rs  keep.rs  nonexistent-file.rs  post-process.rs  postprocess.rs  project-version-check.rs  projects.rs  script.rs  smart-punctuaction.rs  sort_lines.rs  tex-tools.rs  toc-sort.rs  version-check.rs  watch.rs  wildcards.rs
tests/hbs-js/: package.json
tests/projects/: default
tests/projects/postprocess/: bard.toml
tests/projects/postprocess/songs/: yippie.md
tests/projects/watch/: bard.toml
tests/projects/watch/templates/: html.hbs
tests/test-projects/all-features/: bard.toml
tests/test-projects/all-features/output/: .gitignore  copy-of-songbook.html  fonts  script.bat  script.sh  songbook.hovorka.xml  songbook.html  songbook.json  songbook.tex  songbook.xml
tests/test-projects/all-features/songs/: md-all.md  multiple.md
tests/test-projects/all-features/songs/wildcard/: 01.md  02.md
tests/test-projects/default-templates/: bard.toml
tests/test-projects/default-templates-save/: bard.toml
tests/test-projects/html/: bard.toml
tests/test-projects/html/songs/: yippie.md
tests/test-projects/html/templates/: html.hbs  pdf.hbs
tests/test-projects/nonexistent-file/: bard.toml
tests/test-projects/nonexistent-file/output/: songbook.html
tests/test-projects/postprocess/: bard.toml  process.bat  process.sh
tests/test-projects/project-version-9001/: bard.toml
tests/test-projects/script/: bard.toml
tests/test-projects/script-fail/: bard.toml
tests/test-projects/script-fail/output/: script.sh
tests/test-projects/script/output/: script.bat  script.sh
tests/test-projects/smart-punctuation/: bard.toml
tests/test-projects/smart-punctuation/songs/: yippie.md
tests/test-projects/toc-sort/: bard.toml
tests/test-projects/toc-sort/songs/: a.md  b.md  c.md  č.md
tests/test-projects/version-check/: bard.toml
tests/test-projects/version-check/templates/: html.hbs
tests/test-projects/watch/: bard.toml
tests/test-projects/watch/templates/: html.hbs
tests/test-projects/wildcards-1/: bard.toml
tests/test-projects/wildcards-n/: bard.toml
tests/test-projects/wildcards-n/songs/: a-1.md  a-2.md  a-3.md  b-1.md  b-2.md  b-3.md  c-1.md  c-2.md  c-3.md
tests/util/: mod.rs  tex-mock.rs
tests/util_ng/: mod.rs
