[package]
name = "bard"
version = "2.0.0-alpha1"
authors = ["Vojtech Kral <vojtech@kral.pm>"]
description = "Creates PDF and HTML songbooks out of easy-to-write Markdown sources."
readme = "README.md"
repository = "https://github.com/vojtechkral/bard"
homepage = "https://github.com/vojtechkral/bard"
license = "Apache-2.0"
keywords = ["music", "markdown"]
edition = "2018"

[lib]
name = "bard"
path = "src/lib.rs"

[[bin]]
name = "bard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.26"
atty = "0.2.14"
camino = { version = "1.0.7", features = ["serde1"] }
clap = { version = "4.0.2", default_features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
colored = "2.0.0" # TODO: don't use anymore (use atty + term)
comrak = { version = "0.14.0", default_features = false }
ctrlc = "3.1.3"
fastrand = "1.8.0"
globset = "0.4.8"
handlebars = "4.3.3"
html5ever = "0.26.0"
image = { version = "0.24.1", default_features = false, features = ["png", "jpeg"] }
lexical-sort = "0.3.1"
nix = "0.25.0"
notify = "5.0"
once_cell = "1.15.0"
parking_lot = "0.12.1"
quick-xml = "0.26.0"
regex = "1.4.5"
semver = "1.0.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["preserve_order"] }
term = "0.7.0"
thiserror = "1.0.14"
toml = "0.5"

[dev-dependencies]
assert-json-diff = "2.0.1"
fs_extra = "1.2.0"

[package.metadata.docs.rs]
features = ["docs_rs_pls_dont_build_these_docs_this_is_internal_stuff"]

[package.metadata.deb]
depends = ""

[package.metadata.generate-rpm]
assets = [
    # NB. cargo-generate-rpm auto-updates the target/release path when cross-compiling
    { source = "target/release/bard", dest = "/usr/bin/bard", mode = "755" }
]
