[package]
name = "bard"
version = "2.0.0-alpha1"
authors = ["Vojtech Kral <vojtech@kral.pm>"]
description = "Creates PDF and HTML songbooks out of easy-to-write Markdown sources."
readme = "README.md"
repository = "https://github.com/vojtechkral/bard"
homepage = "https://github.com/vojtechkral/bard"
license = "Apache-2.0"
keywords = ["music", "markdown"]
edition = "2018"

default-run = "bard"

[lib]
name = "bard"
path = "src/lib.rs"

[[bin]]
name = "bard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.26"
atty = "0.2.14"
clap = { version = "4.0.2", default_features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
comrak = { version = "0.15.0", default_features = false }
console = "0.15.2"
ctrlc = "3.1.3"
fastrand = "1.8.0"
globset = "=0.4.6" # pinned to allow (transitive) watchexec 1.17, which allows nix version with patched RUSTSEC
handlebars = "4.3.3"
html5ever = "0.26.0"
image = {version = "=0.24.4", default_features = false, features = ["png", "jpeg"] } # FIXME: comment msrv
lexical-sort = "0.3.1"
nix = "0.26.0"
notify = "5.0"
once_cell = "1.15.0"
parking_lot = "0.12.1"
quick-xml = "0.26.0"
regex = "1.4.5"
semver = "1.0.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["preserve_order"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.14"
toml = "0.5"

# tectonic embedding, enable with the `tectonic` feature
tectonic = { version = "0.12.0", optional = true, features = ["external-harfbuzz"] }
tectonic_bridge_core = { version = "0.3.1", optional = true }

[features]
tectonic = ["dep:tectonic", "dep:tectonic_bridge_core"]

[dev-dependencies]
assert-json-diff = "2.0.1"
fs_extra = "1.2.0"

[[bin]]
# Small helper bin for testing TeX binary setting
name = "tex-mock"
path = "tests/util/tex-mock.rs"
test = false
doctest = false
bench = false
doc = false

[package.metadata.deb]
depends = ""

[package.metadata.generate-rpm]
assets = [
    # NB. cargo-generate-rpm auto-updates the target/release path when cross-compiling
    { source = "target/release/bard", dest = "/usr/bin/bard", mode = "755" }
]
