[package]
name = "bard"
version = "2.0.0-alpha2"
authors = ["Vojtech Kral and contributors"]
description = "Creates PDF and HTML songbooks out of easy-to-write Markdown sources."
readme = "README.md"
repository = "https://github.com/vojtechkral/bard"
homepage = "https://bard.md"
license = "Apache-2.0"
keywords = ["music", "markdown"]

rust-version = "1.60"
edition = "2018"

default-run = "bard"

[lib]
name = "bard"
path = "src/lib.rs"

[[bin]]
name = "bard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.26"
atty = "0.2.14"
clap = { version = "4.2.7", default_features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
comrak = { version = "0.18.0", default_features = false }
console = "0.15.2"
ctrlc = "3.1.3"
fastrand = "2.0.0"
globset = "0.4.10"
handlebars = "4.3.3"
html5ever = "0.26.0"
image = { version = "0.24.6", default_features = false, features = ["png", "jpeg"] }
lexical-sort = "0.3.1"
nix = "0.26.0"
notify = "6.0"
once_cell = "1.15.0"
parking_lot = "0.12.1"
quick-xml = "0.29.0"
regex = "1.4.5"
semver = "1.0.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.39", features = ["preserve_order"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.14"
toml = "0.7.2"

# tectonic embedding, enable with the `tectonic` feature
tectonic = { version = "0.14.1", optional = true, features = ["external-harfbuzz"] }
tectonic_bridge_core = { version = "0.4.0", optional = true }

[features]
tectonic = ["dep:tectonic", "dep:tectonic_bridge_core"]

[dev-dependencies]
assert-json-diff = "2.0.1"
base64 = "0.21.0"
fs_extra = "1.2.0"
indoc = "2.0.1"

[[bin]]
# Small helper bin for testing TeX binary setting
name = "tex-mock"
path = "tests/util/tex-mock.rs"
test = false
doctest = false
bench = false
doc = false

[package.metadata.deb]
depends = ""

[package.metadata.generate-rpm]
assets = [
    # NB. cargo-generate-rpm auto-updates the target/release path when cross-compiling
    { source = "target/release/bard", dest = "/usr/bin/bard", mode = "755" }
]
